MDEV-8193: UNTIL clause in START SLAVE is sporadically disobeyed by parallel replication

The code was using the wrong variable when comparing the binlog name
for the UNTIL position. This could cause the comparison to fail after
binlog rotation, in turn causing the UNTIL clause to not trigger slave
stop.